# sysinfopp

./: README.md  meson.build
samples/: meson.build
samples/printinfo/: meson.build
samples/printinfo/src/: source.cpp
sysinfopp/: meson.build
sysinfopp/impl/: meson.build
sysinfopp/impl/fallback/: meson.build
sysinfopp/impl/fallback/src/: fallback.cpp
sysinfopp/impl/include/sysinfopp/impl/: connector.hpp
sysinfopp/include/sysinfopp/: sysinfopp.hpp
sysinfopp/include/sysinfopp/private/: exportAPI.hpp
sysinfopp/private/sysinfopp/: constants.hpp  macros.hpp
sysinfopp/src/: sysinfopp.cpp
