

printinfo_demo_sources = [
    'src/source.cpp'
]
printinfo_demo_deps = [sysinfopp_dep]


## demo executable
printinfo_demo_exe = executable('demo',
                            printinfo_demo_sources,
                            #include_directories: printinfo_demo_inc,
                            #cpp_args: printinfo_demo_args,
                            #link_with: printinfo_demo_link,
                            dependencies: printinfo_demo_deps)